[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/interactable/weaponbench/wb_mod_picker.gd" id="1_modpicker"]

[node name="WbModPicker" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
visible = false
script = ExtResource("1_modpicker")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="PanelContainer/Margin"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Compatible Mods"

[node name="BodyHBox" type="HBoxContainer" parent="PanelContainer/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ListPanel" type="PanelContainer" parent="PanelContainer/Margin/VBox/BodyHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2

[node name="ListMargin" type="MarginContainer" parent="PanelContainer/Margin/VBox/BodyHBox/ListPanel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="ListScroll" type="ScrollContainer" parent="PanelContainer/Margin/VBox/BodyHBox/ListPanel/ListMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListVBox" type="VBoxContainer" parent="PanelContainer/Margin/VBox/BodyHBox/ListPanel/ListMargin/ListScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsPanel" type="PanelContainer" parent="PanelContainer/Margin/VBox/BodyHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.8

[node name="DetailsMargin" type="MarginContainer" parent="PanelContainer/Margin/VBox/BodyHBox/DetailsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="DetailsLabel" type="Label" parent="PanelContainer/Margin/VBox/BodyHBox/DetailsPanel/DetailsMargin"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3
text = "Select a mod."

[node name="FooterHBox" type="HBoxContainer" parent="PanelContainer/Margin/VBox"]
layout_mode = 2
alignment = 2

[node name="InstallButton" type="Button" parent="PanelContainer/Margin/VBox/FooterHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Install"

[node name="RemoveButton" type="Button" parent="PanelContainer/Margin/VBox/FooterHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove"

[node name="CloseButton" type="Button" parent="PanelContainer/Margin/VBox/FooterHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
